# netlink_adapter

./: Cargo.toml  README.md
external_code/c/: netlink.h
external_code/java/com/netlink/: Example.java
external_code/java/com/netlink/api/: Config.java  Context.java  GroupItem.java  IPv4Converter.java  NetlinkCoreApi.java  NetworkNatInfo.java  RouteItem.java
src/: lib.rs
src/c_bridge/: api.rs  config.rs  entity.rs  mod.rs
src/java_bridge/: api.rs  config.rs  entity.rs  mod.rs  utils.rs
